  Power Cycle time (Portal Control Panel & Crystal Matter Generator) is now
    drawn with the status message instead of using the work percentage.
FIXED:
  Fixed es_es.json language files.
  Efficiency text in the Crystal Matter Generator was overlapping itself.
  Fixed the drawn ItemStacks in the Circuit Fabricator gui glitching while the
    machine was running.



v1.4.1 - January 6, 2022
NEW:
  Added 2 commands to ADDSynthCore that help in determining the number of ore blocks
    in a given area. Mostly useful to developers.
  Added furnace smelting recipes for the Energy Crystal and Steel Ingots, so these can be
    automated using electric furnaces from other mods.
    - But using the Blast Furnace is still more efficient if you're not getting free energy.
  Added another crafting recipe for the Light Block that uses Energy Crystals.
    - Because I'm sure I'm not the only one that keeps making 9 Energy Crystals
      only to realize you can't make a Light Block from them.
CHANGED:
  Was definitely not generating enough Silicon Ore, so we've changed the default generation
    config values in this update to generate more Silicon.
  No longer registers a Bronze Ingot crafting recipe if Immersive Engineering or Mekanism is installed.
  Changed the Black Hole erase algorithm default speed from 50% of a tick to 20%.
  The Black Hole no longer has a collision box, similar to the Null Block. This means you won't
    be able to break the Black Hole to stop it from erasing the world.
FIXED:
  Fixed the Fusion Chamber not dropping when mined.
  Fixed Ores that drop an item not being affected by Pickaxes with the Fortune effect.
  Finally added the Job system. Now the Magic Infuser and Circuit Fabricator
    (machines with more than 1 input slot) will now show their Time Remaining correctly.
  More recipe advancement fixes.



v1.4 - July 26, 2021
INFO:
  Moved all materials to a new ADDSynth Materials mod.