@@ -1,7 +1,9 @@
 package addsynth.core.gui.widgets.buttons;
 
 import javax.annotation.Nonnull;
+import addsynth.core.ADDSynthCore;
 import addsynth.core.gui.widgets.WidgetUtil;
+import addsynth.core.util.StringUtil;
 import com.mojang.blaze3d.platform.GlStateManager;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.widget.Widget;
@@ -22,7 +24,10 @@ public abstract class AdjustableButton extends AbstractButton {
    * @param height
    */
   public AdjustableButton(int x, int y, int width, int height){
-    super(x, y, width, height, "");
+    super(x, y, width, Math.min(height, max_height), "");
+    if(height > max_height){
+      ADDSynthCore.log.warn(StringUtil.build("Cannot set height of ", AdjustableButton.class.getSimpleName(), " higher than ", Integer.toString(max_height), "."));
+    }
   }
 
   /**
@@ -34,7 +39,10 @@ public abstract class AdjustableButton extends AbstractButton {
    * @param buttonText
    */
   public AdjustableButton(int x, int y, int width, int height, @Nonnull String buttonText){
-    super(x, y, width, height, buttonText);
+    super(x, y, width, Math.min(height, max_height), buttonText);
+    if(height > max_height){
+      ADDSynthCore.log.warn(StringUtil.build("Cannot set height of ", AdjustableButton.class.getSimpleName(), " higher than ", Integer.toString(max_height), "."));
+    }
   }
 
     /**
